--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
 	"build": "node script/build.js",
-	"test": "npm run build-pack && karma start script/karma.conf.js",
-	"te": "karma start script/karma.config.js",
+	"te": "npm run build-pack && karma start script/karma.conf.js",
+	"test": "karma start script/karma.config.js",
 	"karma": "karma init ./script/karam.config.js"
   },
   "author": "hjai",
