--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,26 @@ notifications:
 
 before_install:
   - sudo apt-get install google-chrome-stable
+
 install:
     - npm install
+
 script:
-    - npm run test
+    - npm run build
+
+branches:
+  only:
+    - master
+
+after_script:
+  - cd ./dist
+  - git init
+  - git config user.name "haojun"
+  - git config user.email "hjaim@163.com"
+  - git add .
+  - git commit -m "update utils"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
+
+env:
+ global:
+   - GH_REF: github.com/hjaiim/utils.git
