--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ branches:
 after_script:
   - cd ./dist
   - git init
-  - git config user.name "haojun"
-  - git config user.email "hjaim@163.com"
+  - git config user.name "${GH_NAME}"
+  - git config user.email "${GH_EMAIL}"
   - git add .
   - git commit -m "update utils"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
