--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,11 @@ after_script:
 env:
  global:
    - GH_REF: github.com/hjaiim/utils.git
+
+deploy:
+  provider: npm
+  email: "$NPM_EMAIL"
+  api_key: "$NPM_TOKEN"
+  skip_cleanup: true
+  on:
+    branch: production
