--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,15 @@ deploy:
   #on:
     #branch: production
 
+after_script:
+  - cd ./dist
+  - git init
+  - git config user.name "haojun"
+  - git config user.email "hjaim@163.com"
+  - git add .
+  - git commit -m "update utils"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
+
 env:
   global:
    - GH_REF: github.com/hjaiim/utils.git
