--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,15 @@ deploy:
   email: "$GH_EMAIL"
   api_key: "$NPM_TOKEN"
   skip_cleanup: true
-  #on:
+  on:
     #branch: production
+    branch: master
 
 after_script:
   - cd ./dist
   - git init
   - git config user.name "haojun"
-  - git config user.email "hjaim@163.com"
+  - git config user.email "hjaiim@163.com"
   - git add .
   - git commit -m "update utils"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
