--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"build": "node script/build.js",
 	"te": "npm run build-pack && karma start script/karma.conf.js",
 	"test": "karma start script/karma.config.js",
-	"karma": "karma init ./script/karam.config.js"
+	"karma": "karma init ./script/karam.config.js",
+	"build-copy": "node script/build-copy.js",
+	"build-pack": "node script/build-pack.js"
   },
   "author": "hjai",
   "license": "ISC",
