--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ deploy:
     branch: production
 
 after_script:
-  - cd ./dist
+  - cd ./utils
   - git init
   - git config user.name "${GH_NAME}"
   - git config user.email "${GH_EMAIL}"
   - git add .
   - git commit -m "update utils"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:release
 
 env:
   global:
