--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "hjai-utils",
-  "version": "1.0.1",
-  "description": "js工具库",
-  "buildName": "utils",
-  "main": "index.js",
-  "directories": {
-	"test": "test"
-  },
-  "scripts": {
-	"build": "node script/build.js",
-	"te": "npm run build-pack && karma start script/karma.conf.js",
-	"test": "karma start script/karma.config.js",
-	"karma": "karma init ./script/karam.config.js",
-	"build-copy": "node script/build-copy.js",
-	"build-pack": "node script/build-pack.js"
-  },
-  "author": "hjai",
-  "license": "ISC",
-  "devDependencies": {
-	"babel-core": "^6.26.3",
-	"babel-loader": "^7.1.4",
-	"babel-preset-env": "^1.6.1",
-	"chalk": "^2.4.1",
-	"copy": "^0.3.1",
-	"karma": "^2.0.2",
-	"karma-chrome-launcher": "^2.2.0",
-	"karma-coverage": "^1.1.1",
-	"karma-mocha": "^1.3.0",
-	"karma-mocha-reporter": "^2.2.5",
-	"karma-power-assert": "^1.0.0",
-	"mocha": "^5.1.1",
-	"ora": "^2.0.0",
-	"power-assert": "^1.5.0",
-	"rimraf": "^2.6.2",
-	"uglifyjs-webpack-plugin": "^1.2.5",
-	"webpack": "^4.6.0"
-  }
+	"name": "hjai-utils",
+	"version": "1.0.1",
+	"description": "js工具库",
+	"buildName": "utils",
+	"main": "index.js",
+	"directories": {
+		"test": "test"
+	},
+	"scripts": {
+		"build": "node script/build.js",
+		"te": "npm run build-pack && karma start script/karma.conf.js",
+		"test": "karma start script/karma.config.js",
+		"karma": "karma init ./script/karam.config.js",
+		"build-copy": "node script/build-copy.js",
+		"build-pack": "node script/build-pack.js"
+	},
+	"author": "hjai",
+	"license": "ISC",
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.6.1",
+		"chalk": "^2.4.1",
+		"copy": "^0.3.1",
+		"karma": "^2.0.2",
+		"karma-chrome-launcher": "^2.2.0",
+		"karma-coverage": "^1.1.1",
+		"karma-mocha": "^1.3.0",
+		"karma-mocha-reporter": "^2.2.5",
+		"karma-power-assert": "^1.0.0",
+		"mocha": "^5.1.1",
+		"ora": "^2.0.0",
+		"power-assert": "^1.5.0",
+		"rimraf": "^2.6.2",
+		"uglifyjs-webpack-plugin": "^1.2.5",
+		"webpack": "^4.6.0"
+	},
+	"dependencies": {
+		"mk-dir": "^1.0.1"
+	}
 }
