--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
     - npm install
 
 script:
-    #- npm run test
+    - npm run build
 
 after_success:
 #- cat ./coverage/lcov.info | node_modules/.bin/coveralls --verbose
@@ -25,7 +25,7 @@ branches:
     - production
 
 before_deploy:
-  - npm run build
+  #- npm run build
   - npm run build-copy
   - rm -rf ./src ./test ./coverage ./script ./.babelrc
 
