--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ deploy:
     branch: production
 
 after_script:
-  - cd ./utils
+  - cd utils
   - git init
   - git config user.name "${GH_NAME}"
   - git config user.email "${GH_EMAIL}"
