--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ after_script:
   - git config user.email "${GH_EMAIL}"
   - git add .
   - git commit -m "update release"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:release
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
 
 env:
   global:
