--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,11 @@ after_script:
   - git init
   - git config user.name "${GH_NAME}"
   - git config user.email "${GH_EMAIL}"
+  - git checkout -b release
   - git add .
   - git commit -m "update release"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
+  #- git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:release
+  - git push -f origin release
 
 env:
   global:
