--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,16 @@ before_install:
 #- sudo apt-get install google-chrome-stable
 
 install:
+    #默认执行npm install
     - npm install
 
 script:
+    # 默认执行npm run test
     - npm run build
-    - npm run build-copy
-    - rm -rf ./src ./test ./coverage ./script ./.babelrc
+
 after_success:
-#- cat ./coverage/lcov.info | node_modules/.bin/coveralls --verbose
-#- rm -rf ./coverage
+   #- cat ./coverage/lcov.info | node_modules/.bin/coveralls --verbose
+   #- rm -rf ./coverage
 
 branches:
   only:
