--- a/.travis.yml
+++ b/.travis.yml
@@ -7,23 +7,24 @@ cache:
     - node_modules
 
 before_install:
-    - sudo apt-get install google-chrome-stable
+    #- sudo apt-get install google-chrome-stable
 
 install:
     #默认执行npm install
     - npm install
 
 script:
-    # 默认执行npm run test
-    #- npm run build
+    # 默认执行npm test
+    - npm run build
+    #- npm run test
 
 after_success:
-   - cat ./coverage/lcov.info | node_modules/.bin/coveralls --verbose
+   #- cat ./coverage/lcov.info | node_modules/.bin/coveralls --verbose
    #- rm -rf ./coverage
 
 branches:
   only:
-    - master
+    #- master
     - production
 
 before_deploy:
